Add Image controller for single and multi image generation and refine properties